--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@ Special Effects Makeup
 Social Justice
 16
 </div>
-<h1>Leadership</h1>
+<h1 onmouseover="changeColor()">Leadership</h1>
 2017-18 Sophomore Class Vice President
 2018-19 Junior Class President
 
-<h1>Coding languages</h1>
+<h1 onmouseover="changeColor()">Coding languages</h1>
 Python
 HTML/CSS
 JavaScript
 
-<h1>Modeling</h1>
+<h1 onmouseover="changeColor()">Modeling</h1>
 I take inspiration from 70's, 80's & 90's clothing.
 Soon
 <strong><a href="https://www.instagram.com/floremagna/">My style on Instagram</a></strong>
 
-<h1>Social Justice</h1>
+<h1 onmouseover="changeColor()">Social Justice</h1>
 In March 2018, after the Parkland shooting, I helped organize a
 San Mateo-to-San Francisco march against lenient gun control laws.
 About 20 other teens from four other high schools and I partnered
@@ -67,7 +67,7 @@ students". As people who didn't feel safe in our own schools, we took
 the initiative to bring on change. After planning logistics, my specific
 task was social media facilitation and publisizing the march.
 
-<h1>SFX makeup</h1>
+<h1 onmouseover="changeColor()">SFX makeup</h1>
 <button onclick="myFunction()">click to vanquish the monster</button>
 
 <img src= "monster.png" id="monster">
