--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ task was social media facilitation and publisizing the march.
 <h1 onmouseover="changeColor()">SFX makeup</h1>
 <button onclick="myFunction()">click to vanquish the monster</button>
 
-<img src= "monster.png" id="monster">
+<img src= "about-me/monster.png" id="monster">
 Halloween 2016
 
 <script>
